Handle empty observables in `Theme` and add safeguard in `TreeModel`